--- a/Professional.html
+++ b/Professional.html
@@ -25,7 +25,7 @@
 
       <section>
             
-     <img src="images/10520852_994861803873425_102974897167975156_n%20copy.jpg" alt="My Picture" height="150" width="120">       
+     <img src="images/Screen%20Shot%202015-06-13%20at%2011.35.20%20AM.png" alt="My Picture" height="120" width="120">       
       <p>
           "Insert Professional Work here"
       </p>      
